structural-typing/tests/ui/serde_skip_rejected.stderr
error: structural typing does not support #[serde(skip)] or #[serde(skip_deserializing)]
 --> tests/ui/serde_skip_rejected.rs:8:5
  |
8 |     #[serde(skip)]
  |     ^^^^^^^^^^^^^^
