structural-typing/tests/ui/serde_skip_rejected.rs
use serde::Deserialize;
use structural_typing::structural;

#[structural]
#[derive(Deserialize)]
struct User {
    name: String,
    #[serde(skip)]
    email: String,
}

fn main() {}
